bug/white space fixed

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -52,7 +52,7 @@ body {
   }
 }
 
-/* responsive-carousel */
+/* responsive-carousel -----------------------------------------------------------------------*/
 
 .productImages__carousel {
   width: 100%;
@@ -78,35 +78,62 @@ body {
 .control-arrow.control-next,
 .control-arrow.control-prev {
   background: var(--bg) !important;
-  opacity: 0.75 !important;
+  background: transparent !important;
+  opacity: 0.20 !important;
   transition: none !important;
+  transition: opacity 0.4s ease!important;
 }
 .control-arrow.control-next:hover,
 .control-arrow.control-prev:hover {
   opacity: 1 !important;
 }
+
+.carousel .control-arrow:before, 
+.carousel.carousel-slider .control-arrow:before{
+  border: none;
+  color: #ffffff;
+  background-color: #000000;
+  padding: 0.5rem 0.75rem;
+
+}
+
+.carousel .control-prev.control-arrow:before {
+  font-family: 'Courier New', Courier, monospace;
+  content: "<";
+  font-size: 2.5rem;
+}
+.carousel .control-next.control-arrow:before {
+  font-family: 'Courier New', Courier, monospace;
+  content: ">";
+  font-size: 2.5rem;
+}
+
+
+
 .carousel {
   max-width: 100vw !important;
+  border-radius: 17px;
 }
+
 .carousel-status {
-  /* @include sub-body-size; */
-  /* color: var(--text-primary) !important; */
   text-shadow: none !important;
-  /* display: none !important; */
   right: 50% !important;
   top: 1rem !important;
   transform: translateX(50%) !important;
 }
 
-.carousel .control-prev.control-arrow:before {
-  border-right: 8px solid var(--text) !important;
+.carousel .thumb img{
+  width: 100%;
+  height: 100%;
+
 }
-.carousel .control-next.control-arrow:before {
-  border-left: 8px solid var(--text) !important;
+
+.carousel .control-arrow button {
+  border:none;
+  display: none;
 }
 
 .carousel .control-prev.control-arrow {
-  /* left: 1rem !important; */
   margin-right: 1rem;
 }
 
@@ -119,7 +146,8 @@ ul.thumbs {
   display: flex;
   flex-wrap: wrap;
   row-gap: 1rem;
-  justify-content: center;
+  justify-content: flex-start;
+  margin-top: 1.5rem;
 }
 ul.thumbs.animated,
 ul.thumbs {
@@ -128,4 +156,15 @@ ul.thumbs {
 li.thumb {
   display: flex;
   align-self: center !important;
+}
+
+.thumb {
+  border-radius: 14px;
+  width: 115px!important;
+  height: 115px;
+}
+
+.thumb img {
+  border-radius: 14px;
+
 }
